<resources>
    <string name="app_name">AppMarketRaez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulo">Iniciar Sesion</string>
    <string name="help_email">Ingrese su correo</string>
    <string name="help_password">Password</string>
    <string name="enter">Ingresar</string>
    <string name="rememberAccount">Recordar mi cuenta</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="forget_password">Olvide mi password</string>
    <string name="terms">Nuestras politicas de privacidad,terminos y condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_create_account">Create account</string>
    <string name="register_names">Names</string>
    <string name="register_email">Email</string>
    <string name="register_lastname">Lastname</string>
    <string name="register_mobile">Mobile</string>
    <string name="register_nDocument">Identifier number</string>
    <string name="register_password">Password</string>
    <string name="register_create_account_button">Crear cuenta</string>
    <string name="welcome">Welcome</string>
    <string name="categories_list_of_categories">List of categories</string>
    <string name="session_expire" >Your session was expire</string>
    <string name="unauthorize_ok">Ok</string>
    <string name="product_details_add">Add</string>
    <string name="total">Final amount</string>
    <string name="currency">S/.</string>
    <string name="mis_compras_check_in">Check In</string>
    <string name="item_cart_cant">Quantity:</string>
    <string name="item_cart_total_cant">Total:</string>
    <string name="edit_product_dialog_cant">Quantity</string>
    <string name="edit_product_dialog_total">Total:</string>
    <string name="update">Update</string>
    <string name="message_dialog_acept">Ok</string>
    <string name="payment_adress">Address</string>
    <string name="payment_home">Home</string>
    <string name="payment_office">Office</string>
    <string name="payment_others">Others</string>
    <string name="payment_ref">Reference</string>
    <string name="payment_district">District</string>
    <string name="payment_date">Shipping time</string>
    <string name="payment_date_child">Date</string>
    <string name="payment_hour_child">Time</string>
    <string name="payment_pay">Payment type</string>
    <string name="payment_yape">Yape</string>
    <string name="payment_plin">Plin</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_total_cash">Amount to pay</string>
    <string name="payment_finish">Finalize</string>

</resources>